Radcliffe 2: Fix Social Icons Block alignment

--- a/radcliffe-2/assets/css/blocks.css
+++ b/radcliffe-2/assets/css/blocks.css
@@ -334,6 +334,12 @@ ul.wp-block-gallery li {
 	}
 }
 
+/* Social Links */
+
+.wp-social-link {
+	display: inline-block;
+}
+
 /*--------------------------------------------------------------
 5.0 Blocks - Layout Elements
 --------------------------------------------------------------*/
